--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.bdotsamir.mremafs"
     },
     "web": {
       "bundler": "metro",
